[package]
name = "daily_challenge"
version = "0.1.0"
authors = ["Pavlo Tsapliienko <pavel.tsaplienko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = ">0.0"

[dev-dependencies]
pretty_assertions = "0.4.0"
